@@ -47,9 +47,9 @@ Its primary audiences are twofold.
     Traditionally, these are loaded via `[=inc::Foo::Package]` exploiting
     the long held assumption that `"."` ( `$CWD` ) is contained in `@INC`
 
-    However, that is becoming a less safe assumption, and this plugin
-    aims to make such equivalent behaviour practical without needing to rely
-    on that assumption.
+    However, that is becoming a [less safe assumption](#related-reading), and this
+    plugin aims to make such equivalent behaviour practical without needing to
+    rely on that assumption.
 
 # USAGE
 
@@ -164,6 +164,13 @@ Which is functionally similar to:
     @INC = ( @{ $lib }, @INC )
 
 That is, retaining the specified order in ` @INC `.
+
+# RELATED READING
+
+## `dot-in-INC`
+
+- [Todd Rinaldo - How removing `"."` from `@INC` is about to break CPAN](http://blogs.perl.org/users/todd_rinaldo/2016/11/how-removing-from-inc-is-about-to-break-cpan.html)
+- [Todd Rinaldo - What happened to `"."` in `@INC`](http://blogs.perl.org/users/todd_rinaldo/2016/11/what-happened-to-dot-in-inc.html)
 
 # AUTHOR
 
